--- a/views/about.ejs
+++ b/views/about.ejs
@@ -12,6 +12,6 @@
 	    <p>Welcome to About</p>    
   	</div>
   </div>
-  <% include partials/script.ejs %>
+  <% include partials/scripts.ejs %>
   </body>
 </html>
