--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -14,8 +14,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="/">Ссылка</a></li>
-        <li><a href="/about">Ссылка</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/about">About</a></li>
       </ul>        
       <form class="navbar-form navbar-right" role="search">
         <div class="form-group">
